<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?android:colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:hint="@string/form_text_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spCountry"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="?attr/colorPrimary"/>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputStyle"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:hint="@string/form_hint_price"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputStyle"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:hint="@string/form_hint_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top|start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            style="@style/CardView.App"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E0E0E0"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_content_description"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSelectImage"
            style="@style/ButtonOutlined"
            android:text="@string/form_button_select_image"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnSave"
            style="@style/ButtonPrimary"
            android:text="@string/form_button_save"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>